; ModuleID = '/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-merge-extension.c_client_result_alloc.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-merge-extension.c_client_result_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gather_entry = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gather_entry*, i8**)* @client_result_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @client_result_alloc(%struct.gather_entry* %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.gather_entry*, align 8
  %5 = alloca i8**, align 8
  store %struct.gather_entry* %0, %struct.gather_entry** %4, align 8
  store i8** %1, i8*** %5, align 8
  %6 = load %struct.gather_entry*, %struct.gather_entry** %4, align 8
  %7 = getelementptr inbounds %struct.gather_entry, %struct.gather_entry* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %28

11:                                               ; preds = %2
  %12 = load %struct.gather_entry*, %struct.gather_entry** %4, align 8
  %13 = getelementptr inbounds %struct.gather_entry, %struct.gather_entry* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = add nsw i32 %14, 4
  %16 = call i64 @zzmalloc(i32 %15)
  %17 = load %struct.gather_entry*, %struct.gather_entry** %4, align 8
  %18 = getelementptr inbounds %struct.gather_entry, %struct.gather_entry* %17, i32 0, i32 1
  store i64 %16, i64* %18, align 8
  %19 = load %struct.gather_entry*, %struct.gather_entry** %4, align 8
  %20 = getelementptr inbounds %struct.gather_entry, %struct.gather_entry* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = inttoptr i64 %21 to i8*
  %23 = load i8**, i8*** %5, align 8
  store i8* %22, i8** %23, align 8
  %24 = load %struct.gather_entry*, %struct.gather_entry** %4, align 8
  %25 = getelementptr inbounds %struct.gather_entry, %struct.gather_entry* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = add nsw i32 %26, 4
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %11, %10
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i64 @zzmalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
